IMenu#enable/disable working